maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:22: error: reassignment to val
  count=count+1
       ^PledgeMaze:25: error: reassignment to val
    count=count-1
         ^PledgeMaze:31: error: reassignment to val
      count=count-1
           ^PledgeMaze:37: error: reassignment to val
    count=count+1
         ^PledgeMaze:40: error: reassignment to val
      count=count-1
           ^